syntax = "proto3";
package bonds;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/ixofoundation/ixo-blockchain/x/bonds/types";

message FunctionParam {
  string param = 1;
  string value = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

message QueryBonds {
  repeated string bonds = 1;
}

message BondDetails {
  string bond_did                                 = 1;
  repeated cosmos.base.v1beta1.DecCoin spot_price = 2 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins"];
  cosmos.base.v1beta1.Coin supply                 = 3 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin reserve       = 4 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

message QueryBondsDetailed {
  repeated BondDetails bonds_detailed = 1;
}

message Bond {
  string token                                                      = 1;
  string name                                                       = 2;
  string description                                                = 3;
  string creator_did                                                = 4 [(gogoproto.customtype) = "github.com/ixofoundation/ixo-blockchain/x/did/exported.Did", (gogoproto.nullable) = false];
  string controller_did                                             = 5 [(gogoproto.customtype) = "github.com/ixofoundation/ixo-blockchain/x/did/exported.Did", (gogoproto.nullable) = false];
  string function_type                                              = 6;
  repeated FunctionParam function_parameters                        = 7 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/ixofoundation/ixo-blockchain/x/bonds/types.FunctionParams"];
  repeated string reserve_tokens                                    = 8;
  string tx_fee_percentage                                          = 9 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string exit_fee_percentage                                        = 10 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string fee_address                                                = 11 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.AccAddress", (gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin max_supply                               = 12 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin order_quantity_limits           = 13 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  string sanity_rate                                                = 14 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string sanity_margin_percentage                                   = 15 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin current_supply                           = 16 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin current_reserve                 = 17 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated cosmos.base.v1beta1.Coin current_outcome_payment_reserve = 18 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  bool allow_sells                                                  = 19;
  bool alpha_bond                                                   = 20;
  string batch_blocks                                               = 21 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  string outcome_payment                                            = 22 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string state                                                      = 23 [(gogoproto.customtype) = "github.com/ixofoundation/ixo-blockchain/x/bonds/types.BondState", (gogoproto.nullable) = false];
  string bond_did                                                   = 24 [(gogoproto.customtype) = "github.com/ixofoundation/ixo-blockchain/x/did/exported.Did", (gogoproto.nullable) = false];
}

message BaseOrder {
  string account_did              = 1 [(gogoproto.customtype) = "github.com/ixofoundation/ixo-blockchain/x/did/exported.Did", (gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
  bool cancelled                  = 3;
  string cancel_reason            = 4;
}

message BuyOrder {
  BaseOrder base_order                         = 1 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin max_prices = 2 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

message SellOrder {
  BaseOrder base_order = 1 [(gogoproto.nullable) = false];
}

message SwapOrder {
  BaseOrder base_order = 1 [(gogoproto.nullable) = false];
  string to_token      = 2;
}

message Batch {
  string bond_did                                  = 1 [(gogoproto.customtype) = "github.com/ixofoundation/ixo-blockchain/x/did/exported.Did", (gogoproto.nullable) = false];
  string blocks_remaining                          = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  string next_public_alpha                         = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin total_buy_amount        = 4 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin total_sell_amount       = 5 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.DecCoin buy_prices  = 6 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins"];
  repeated cosmos.base.v1beta1.DecCoin sell_prices = 7 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins"];
  repeated BuyOrder buys                           = 8 [(gogoproto.nullable) = false];
  repeated SellOrder sells                         = 9 [(gogoproto.nullable) = false];
  repeated SwapOrder swaps                         = 10 [(gogoproto.nullable) = false];
}

message QueryBuyPrice {
  cosmos.base.v1beta1.Coin adjusted_supply       = 1 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin prices       = 2 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated cosmos.base.v1beta1.Coin tx_fees      = 3 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated cosmos.base.v1beta1.Coin total_prices = 4 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated cosmos.base.v1beta1.Coin total_fees   = 5 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

message QuerySellReturn {
  cosmos.base.v1beta1.Coin adjusted_supply        = 1 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin returns       = 2 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated cosmos.base.v1beta1.Coin tx_fees       = 3 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated cosmos.base.v1beta1.Coin exit_fees     = 4 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated cosmos.base.v1beta1.Coin total_returns = 5 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated cosmos.base.v1beta1.Coin total_fees    = 6 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

message QuerySwapReturn {
  repeated cosmos.base.v1beta1.Coin total_returns = 1 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated cosmos.base.v1beta1.Coin total_fees    = 2 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

message QueryAlphaMaximums {
  string max_system_alpha_increase = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string max_system_alpha          = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

message Params {
  repeated string reserved_bond_tokens = 1;
}